--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,9 @@
-/****** Main Styling ******/
 
 body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 	color: #222;
-	background-color: #ECF0F1;
+	background-color: #F1EDEC;
 	text-align: center;
 }
 
@@ -25,7 +24,7 @@ ul {
 }
 
 a {
-	color: #2574A9;
+	color: #A95A25;
 }
 
 input {
@@ -46,7 +45,6 @@ input#button {
   width: 60%;
   min-width: 400px;
 }
-/****** Logo Div Styling ******/
 
 img {
 	margin: 20px auto 0 auto;
